--- a/ca.conf
+++ b/ca.conf
@@ -8,9 +8,9 @@ basicConstraints = CA:TRUE
 keyUsage         = cRLSign, keyCertSign
 
 [req_distinguished_name]
-C   = US
-ST  = Washington
-L   = Seattle
+C   = CA
+ST  = Ontario
+L   = Toronto
 CN  = CA
 
 [admin]
@@ -46,47 +46,47 @@ CN = service-accounts
 # that identifies them as being in the `system:nodes` group, with a username
 # of `system:node:<nodeName>`.
 
-[node-0]
-distinguished_name = node-0_distinguished_name
+[node0]
+distinguished_name = node0_distinguished_name
 prompt             = no
-req_extensions     = node-0_req_extensions
+req_extensions     = node0_req_extensions
 
-[node-0_req_extensions]
+[node0_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "Node-0 Certificate"
-subjectAltName       = DNS:node-0, IP:127.0.0.1
+nsComment            = "node0 Certificate"
+subjectAltName       = DNS:node0, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node-0_distinguished_name]
-CN = system:node:node-0
+[node0_distinguished_name]
+CN = system:node:node0
 O  = system:nodes
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
-[node-1]
-distinguished_name = node-1_distinguished_name
+[node1]
+distinguished_name = node1_distinguished_name
 prompt             = no
-req_extensions     = node-1_req_extensions
+req_extensions     = node1_req_extensions
 
-[node-1_req_extensions]
+[node1_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "Node-1 Certificate"
-subjectAltName       = DNS:node-1, IP:127.0.0.1
+nsComment            = "node1 Certificate"
+subjectAltName       = DNS:node1, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node-1_distinguished_name]
-CN = system:node:node-1
+[node1_distinguished_name]
+CN = system:node:node1
 O  = system:nodes
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
 
 # Kube Proxy Section
@@ -107,9 +107,9 @@ subjectKeyIdentifier = hash
 [kube-proxy_distinguished_name]
 CN = system:kube-proxy
 O  = system:node-proxier
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
 
 # Controller Manager
@@ -130,9 +130,9 @@ subjectKeyIdentifier = hash
 [kube-controller-manager_distinguished_name]
 CN = system:kube-controller-manager
 O  = system:kube-controller-manager
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
 
 # Scheduler
@@ -153,9 +153,9 @@ subjectKeyIdentifier = hash
 [kube-scheduler_distinguished_name]
 CN = system:kube-scheduler
 O  = system:system:kube-scheduler
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
 
 # API Server
@@ -187,14 +187,14 @@ DNS.1 = kubernetes.default
 DNS.2 = kubernetes.default.svc
 DNS.3 = kubernetes.default.svc.cluster
 DNS.4 = kubernetes.svc.cluster.local
-DNS.5 = server.kubernetes.local
-DNS.6 = api-server.kubernetes.local
+DNS.5 = kube-server01.zerrtified.local
+DNS.6 = api-kube-server01.zerrtified.local
 
 [kube-api-server_distinguished_name]
 CN = kubernetes
-C  = US
-ST = Washington
-L  = Seattle
+C  = CA
+ST = Ontario
+L  = Toronto
 
 
 [default_req_extensions]
