Update node names

--- a/ca.conf
+++ b/ca.conf
@@ -46,43 +46,43 @@ CN = service-accounts
 # that identifies them as being in the `system:nodes` group, with a username
 # of `system:node:<nodeName>`.
 
-[node0]
-distinguished_name = node0_distinguished_name
+[kube-node0]
+distinguished_name = kube-node0_distinguished_name
 prompt             = no
-req_extensions     = node0_req_extensions
+req_extensions     = kube-node0_req_extensions
 
-[node0_req_extensions]
+[kube-node0_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "node0 Certificate"
-subjectAltName       = DNS:node0, IP:127.0.0.1
+nsComment            = "kube-node0 Certificate"
+subjectAltName       = DNS:kube-node0, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node0_distinguished_name]
-CN = system:node:node0
+[kube-node0_distinguished_name]
+CN = system:node:kube-node0
 O  = system:nodes
 C  = CA
 ST = Ontario
 L  = Toronto
 
-[node1]
-distinguished_name = node1_distinguished_name
+[kube-node1]
+distinguished_name = kube-node1_distinguished_name
 prompt             = no
-req_extensions     = node1_req_extensions
+req_extensions     = kube-node1_req_extensions
 
-[node1_req_extensions]
+[kube-node1_req_extensions]
 basicConstraints     = CA:FALSE
 extendedKeyUsage     = clientAuth, serverAuth
 keyUsage             = critical, digitalSignature, keyEncipherment
 nsCertType           = client
-nsComment            = "node1 Certificate"
-subjectAltName       = DNS:node1, IP:127.0.0.1
+nsComment            = "kube-node1 Certificate"
+subjectAltName       = DNS:kube-node1, IP:127.0.0.1
 subjectKeyIdentifier = hash
 
-[node1_distinguished_name]
-CN = system:node:node1
+[kube-node1_distinguished_name]
+CN = system:node:kube-node1
 O  = system:nodes
 C  = CA
 ST = Ontario
